--- a/sitebuilder/pages/index.html
+++ b/sitebuilder/pages/index.html
@@ -13,18 +13,18 @@
    		<div class="row">
    			<div class="col-md-6">
    				<h2>关于网站</h2>
-   				<img src="http://localhost:9000/image/80x80/" >
+   				<img src="http://10.0.0.15:9000/image/80x80/" >
    				<p>{% lorem %}</p>
-   				<img src="http://localhost:9000/image/555x520/" >
+   				<img src="http://10.0.0.15:9000/image/555x520/" >
 
    			</div>
 
    			<div class="col-md-6">
    				<h2>联系我</h2>
-   				<img src="http://localhost:9000/image/400x120/" >
+   				<img src="http://10.0.0.15:9000/image/400x120/" >
    				<p>{% lorem %}</p>
    				<p>
-   					<img src="http://localhost:9000/image/555x300/" >
+   					<img src="http://10.0.0.15:9000/image/555x300/" >
    					<a href="{% url 'page' 'contact' %}" class="btn btn-default" role="button">
    						联系我们 >>
    					</a>
