--- a/sitebuilder/pages/news.html
+++ b/sitebuilder/pages/news.html
@@ -5,15 +5,15 @@
 	<div class="row">
 		<div class="col-md-6">
 			<h2>国内IT新闻</h2>
-			<img src="http://localhost:9000/image/80x80/" >
+			<img src="http://10.0.0.15:9000/image/80x80/" >
 			<p>{% lorem %}</p>
-			<img src="http://localhost:9000/image/555x520/" >
+			<img src="http://10.0.0.15:9000/image/555x520/" >
 		</div>
 		<div class="col-md-6">
 			<h2>国际IT新闻</h2>
-			<img src="http://localhost:9000/image/80x80/" >
+			<img src="http://10.0.0.15:9000/image/80x80/" >
 			<p>{% lorem %}</p>
-			<img src="http://localhost:9000/image/555x520/" >
+			<img src="http://10.0.0.15:9000/image/555x520/" >
 		</div>
 	</div>
 </div>
