更新自适应图片格式！

--- a/sitebuilder/pages/news.html
+++ b/sitebuilder/pages/news.html
@@ -7,13 +7,13 @@
 			<h2>国内IT新闻</h2>
 			<img src="http://10.0.0.15:9000/image/80x80/" >
 			<p>{% lorem %}</p>
-			<img src="http://10.0.0.15:9000/image/555x520/" >
+			<img src="http://10.0.0.15:9000/image/1920x1080/" class="img-thumbnail img-responsive">
 		</div>
 		<div class="col-md-6">
 			<h2>国际IT新闻</h2>
 			<img src="http://10.0.0.15:9000/image/80x80/" >
 			<p>{% lorem %}</p>
-			<img src="http://10.0.0.15:9000/image/555x520/" >
+			<img src="http://10.0.0.15:9000/image/1440x900/" class="img-thumbnail img-responsive">
 		</div>
 	</div>
 </div>
